force-app/main/default/objects/Sales_Order__c/fields/Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Agreement_ID__c</fullName>
    <formula>Contract__r.Agreement_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement ID</label>
    <type>Text</type>
</CustomField>