force-app/main/default/objects/Sales_Order__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <formula>TEXT(Contract__r.Billing_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>