force-app/main/default/objects/Sales_Order__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Note</label>
    <type>Checkbox</type>
</CustomField>