force-app/main/default/objects/Sales_Order__c/fields/Installation_Name__c.field-meta.xml
<CustomField>
    <fullName>Installation_Name__c</fullName>
    <formula>Installation__r.Installation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Name</label>
    <type>Text</type>
</CustomField>