force-app/main/default/objects/Sales_Order__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>