force-app/main/default/objects/Sales_Order__c/fields/Invoice_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account_ID__c</fullName>
    <formula>Invoice_Account__r.X18_Digit_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Account ID</label>
    <type>Text</type>
</CustomField>