force-app/main/default/objects/Sales_Order__c/fields/Netsuite_Order__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Order__c</fullName>
    <label>Netsuite Order #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>