force-app/main/default/objects/Sales_Order__c/fields/Netsuite_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Order_ID__c</fullName>
    <label>Netsuite Order ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>