force-app/main/default/objects/Sales_Order__c/fields/NS_Subsidiary_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Subsidiary_ID__c</fullName>
    <formula>Contract__r.Legal_Entity__r.NS_Subsidiary_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Subsidiary ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>