force-app/main/default/objects/Sales_Order__c/fields/Original_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Original Sales Orders</relationshipLabel>
    <relationshipName>Original_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>