force-app/main/default/objects/Sales_Order__c/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <formula>Installation__r.Package__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Name</label>
    <type>Text</type>
</CustomField>