force-app/main/default/objects/Sales_Order__c/fields/Status_of_delivery__c.field-meta.xml
<CustomField>
    <fullName>Status_of_delivery__c</fullName>
    <label>Status of delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>