force-app/main/default/objects/Sales_Order__c/fields/Vessel_IMO__c.field-meta.xml
<CustomField>
    <fullName>Vessel_IMO__c</fullName>
    <formula>Installation__r.Vessel_IMO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel IMO</label>
    <type>Text</type>
</CustomField>