force-app/main/default/objects/Sales_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Netsuite_Order__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Installation__c</columns>
    <columns>Invoice_Account__c</columns>
    <columns>NS_Subsidiary_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>