force-app/main/default/objects/Sales_Order__c/listViews/Unbilled_sales_Orders.listView-meta.xml
<ListView>
    <fullName>Unbilled_sales_Orders</fullName>
    <columns>Netsuite_Order__c</columns>
    <columns>NAME</columns>
    <columns>Total_Amount__c</columns>
    <columns>Installation_Name__c</columns>
    <columns>Invoice_Account__c</columns>
    <columns>Agreement_ID__c</columns>
    <columns>Installation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unbilled,Pending Approval</value>
    </filters>
    <label>Unbilled sales Orders</label>
</ListView>